--- a/index.html
+++ b/index.html
@@ -10,7 +10,106 @@
 </head>
 
 <body>
+  <div class="ticket flex">
+    <div class="left-side">
+      <div class="codes flex">
+        <div id="logo">
+          <img src="./img/2560px-Trenitalia_logo.svg.png" alt="Trenitalia logo">
+        </div>
+        <div id="qr-code">
+          <img src="./img/QR_code_for_mobile_English_Wikipedia.svg.png" alt="QR Code">
+        </div>
+        <div id="z-symbol">
+          <img src="./img/My project-1 (21).png">
+        </div>
+        <div id="number">
+          <span>AAZ 2719345</span>
+        </div>
+      </div>
+    </div>
+    <div class="center">
+      <div id="heading">
+        Biglietto treno ordinario da convalidare
+      </div>
+      <div id="subheading">
+        <div>UTILIZZABILE IL 09/11/2022</div>
+        <div>Emit 0083 Vett 0083 TRENITALIA S.P.A VALGONO LE CONDIZIONI DEL VETTORE</div>
+      </div>
+      <div id="from">
+        <div class="col1 custom-border">
+          <div class="hr flex">
+            <span>Nome</span>
+            <input id="passengerName" type="text" placeholder="Inserisci nome">
+          </div>
+        </div>
+        <div class="col2 custom-border">
+          <div class="hr flex">
+            <span>Cognome</span>
+            <input id="passengerSurname" type="text" placeholder="Inserisci cognome">
+          </div>
+        </div>
+        <div class="col3 custom-border">
+          <div class="hr">
+            <span>KM da percorrere</span>
+            <span>Fascia d'età</span>
+          </div>
+          <div>
+            <input id="distanceKm" type="text" placeholder="Inserisci KM">
+            <input id="passengerAge" type="text" placeholder="Inserisci la tua età">
+          </div>
+        </div>
+      </div>
+      <div id="address">
+        <div>VIA VERCEL</div>
+        <div>DA ESIBIRE IN CASO DI CAMBIO DATA</div>
+        <div>KM 153</div>
+      </div>
+      <div id="valid-time">
+        <div>TARIFFA 39/AS</div>
+        <div>VALE 4H DA CONVALIDA</div>
+      </div>
+      <span>TOT. BIGL. N 1</span>
 
+      <div>
+        <h1 id="pricing">
+          Inizia subito a calcolare il costo del tuo biglietto &#8594
+        </h1>
+      </div>
+
+
+      <div class="footer">
+        <span>525402533</span>
+        <span>ROMA P.S.</span>
+        <span>17216 20:19 30221-5 // NON FISCALE //</span>
+        <span>0764AAZ2719345</span>
+      </div>
+    </div>
+
+    <div class="right-side">
+      <div class="passengers">
+        <span>N. 1 PASSEGGERO</span>
+      </div>
+      <div class="class flex">
+        <div class="col">
+          <div class="hr"></div>
+        </div>
+        <div class="col">
+          <div class="hr"></div>
+        </div>
+        <div class="col">
+          <div class="hr">
+            Classe
+          </div>
+          2
+        </div>
+      </div>
+      <div class="price flex">
+        <span>Costo Biglietto</span>
+        <button class="calculate">Calcola</button>
+      </div>
+      P.IVA 05403151003
+    </div>
+  </div>
 
   <script src="./js/master.js"></script>
 </body>
